--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -10,7 +10,7 @@
     <h1 id="sub1">Generate a<br>
       <span id="sub2">random password </span> </h1>
     <p class="para">Never use an insecure password again.</p>
-    <button class="but">Generate passwords</button>
+    <button class="but" onclick="generate()">Generate passwords</button>
     <div class="line"></div>
     <div class="password">
       <input type="text" id="pass1" disabled>
